--- a/assets/style.css
+++ b/assets/style.css
@@ -30,15 +30,23 @@ header{
 }
 
 .main-content{
-    border:1px solid black;
     position: absolute;
-    top: 40%;
+    top: 25%;
     width: 100%;
     text-align: center;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.content-1{
+    width:30vw;
+}
+
+.content-1 h1{
+    font-family: "Playfair Display", serif;
+    font-size:4rem;
 }
 
 .btn-1{
